configs/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # On force la redirection SSL pour le navigateur
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # On dit explicitement à Nginx que le backend parle HTTP (port 8080)
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # On ajoute des timeouts pour éviter les coupures réseau sur petit VPS
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.backup.mairie360-eip.fr
    secretName: argocd-server-tls
  rules:
  - host: argocd.backup.mairie360-eip.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80 # Le port 80 du service pointe vers le 8080 du pod
